# libcontext

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 001-progressive-disclosure-over-always-on-context.md  002-skill-plus-cli-as-primary-integration.md  004-ast-only-inspection.md  README.md
src/libcontext/: __init__.py  _envsetup.py  _security.py  cache.py  cli.py  collector.py  config.py  diff.py  exceptions.py  inspector.py  mcp_server.py  models.py  renderer.py
tests/: test_cache.py  test_cli.py  test_cli_mcp_parity.py  test_collector.py  test_config.py  test_diff.py  test_envsetup.py  test_inspector.py  test_mcp_server.py  test_models.py  test_renderer.py  test_security.py
